[package]
name = "alvr_predictor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# external dependencies
nalgebra = "0.32.5"
adskalman = {git="https://github.com/strawlab/adskalman-rs.git"}
nalgebra-rand-mvn = {git="https://github.com/strawlab/nalgebra-rand-mvn", rev="40dd19c5967b24389452aa8c540f643b10fe4e34"}
env_logger = "0.11"
log = { version = "0.4", features = ["release_max_level_debug"] }
anyhow = "1.0"

# alvr dependencies
alvr_common.workspace = true
alvr_events.workspace = true
alvr_filesystem.workspace = true
alvr_packets.workspace = true
alvr_session.workspace = true


[lib]
name = "my_predictor_lib"
path = "src/lib.rs"

[[bin]]
name = "binary111"
path = "src/bin.rs"